fix align of details

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ input[type="radio"]
   -webkit-appearance:none;
   display:inline-block;
   user-select:none;
-  padding-top: 7px;
+  line-height:45px;
   margin: 0px;
   width: 30px;
   height:50px;
@@ -177,7 +177,6 @@ input[type="text"]
 }
 .edittaskname
 {
-  height:30px;
   text-align:left;
   text-shadow:none;
   margin:0px;
@@ -186,6 +185,9 @@ input[type="text"]
   background:white;
   color:black;
   font-size:24px;
+  width:70%;
+  float:left;
+  margin-left:5px;
 }
 .desc
 {
@@ -198,7 +200,6 @@ input[type="text"]
 .desc_header
 {
 	height:50px;
-	margin-top:2px;
   padding-top:50px;
 
 }
@@ -244,6 +245,9 @@ input[type="text"]
   user-select:none;
   background:lightgrey;
   border-radius:5px;
+  text-align:left;
+  line-height:45px;
+  padding-left:5px;
 }
 .touchtaskname[open]
 {
@@ -264,8 +268,10 @@ input[type="text"]
 textarea
 {
   resize:none;
-  width:95%;
+  width:96%;
   margin-bottom:5px;
+  margin-left:5px;
+  margin-right:5px;
   font-size:20px;
 }
 #del_button
@@ -274,7 +280,7 @@ textarea
   font-size:26px;
   position:relative;
   float:right;
-  margin-right:20px;
+  margin-right:5px;
 }
 
 #add_task_control
